--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.32.0
-numpy==1.26.4
+streamlit==1.28.0
+tensorflow-cpu==2.13.0
+numpy==1.24.3
 Pillow==10.1.0
-pandas==2.1.4
+pandas==2.0.3
 h5py==3.10.0
-requests==2.31.0
