--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit==1.28.0
-tensorflow-cpu==2.13.0
-numpy==1.24.3
-Pillow==10.1.0
-pandas==2.0.3
-h5py==3.10.0
-requests==2.31.0
+streamlit>=1.28.0
+tensorflow>=2.13.0
+pillow>=10.0.0
+opencv-python>=4.8.0
+numpy>=1.24.0
+gdown>=4.7.0
