--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit>=1.28.0
-tensorflow>=2.13.0
-pillow>=10.0.0
-numpy>=1.24.0
-gdown>=4.7.0
-requests>=2.31.0
+streamlit==1.29.0
+tensorflow==2.13.0
+numpy
+pillow
+opencv-python
+matplotlib
 gdown
